src/objects/Fail_Sharing_Log__c.object
<CustomObject>
    <description>It contains Information of records which got failed during sharing execution</description>
    <fields>
        <fullName>Fail_Record_Id__c</fullName>
        <description>SObject Record Id which failed during Sharing Execution</description>
        <inlineHelpText>SObject Record Id which failed during Sharing Execution</inlineHelpText>
        <label>Fail Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Id__c</fullName>
        <description>Parent SObject Record Id of Child SObject which failed during Sharing Execution</description>
        <inlineHelpText>Parent SObject Record Id of Child SObject which failed during Sharing Execution</inlineHelpText>
        <label>Parent Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for the failure of record during sharing execution</description>
        <inlineHelpText>Reason for the failure of record during sharing execution</inlineHelpText>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Failed Sharing Log</label>
    <listViews>
        <fullName>Opportunity_Failed_Sharing_records</fullName>
        <columns>NAME</columns>
        <columns>Fail_Record_Id__c</columns>
        <columns>Parent_Record_Id__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fail_Record_Id__c</field>
            <operation>startsWith</operation>
            <value>006</value>
        </filters>
        <label>Opportunity Failed Sharing records</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Failed Sharing Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Sharing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>